2019-04-01  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/sysv/linux/alpha/kernel-features.h (__NR_shmat):
	Do not redefine.
	* sysdeps/unix/sysv/linux/alpha/sysdep.h (__NR_osf_shmat):
	Do not redefine.

2019-03-30  Maciej W. Rozycki  <macro@wdc.com>

	* sysdeps/unix/sysv/linux/riscv/configure.ac: Quote
	$libc_cv_riscv_float_abi in `test' invocation.
	* sysdeps/unix/sysv/linux/riscv/configure: Regenerate.

2019-03-29  Paul A. Clarke  <pc@us.ibm.com>

	* sysdeps/powerpc/fpu/fenv_libc.h (fegetenv_register): Replace inline
	asm with builtin.
	* sysdeps/powerpc/powerpc64/le/fpu/sfp-machine.h (FP_INIT_ROUNDMODE):
	Likewise.
	* sysdeps/powerpc/fpu/tst-setcontext-fpscr.c (_GET_DI_FPSCR): Likewise.
	(_GET_SI_FPSCR): Likewise.
	(_SET_SI_FPSCR): Likewise.

2019-03-26  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* math/math.h (fpclassify, isfinite, isnormal, isnan): Use builtin for
	clang 2.8.
	(signbit): Use builtin for clang 3.3.
	(isinf): Use builtin for clang 3.7.

2019-03-25  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/fpu/s_float_bitwise.h: Remove file.

2019-03-25  Andreas K. Hüttel  <dilfridge@gentoo.org>

	* nss/tst-nss-files-alias-leak.c (do_test): add missing opening
	quote in printf.

2019-03-25  Mike Crowe  <mac@mcrowe.com>

	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
	pthread_rwlock_timedrdlock with calls to
	pthread_rwlock_timedwrlock to ensure that the latter is tested
	too. Use new function name in diagnostic messages too.

	* nptl/tst-sem5.c: Remove unused headers. Add <support/check.h>.
	(do_test) Use libsupport test macros rather than hand-coded
	conditionals and error messages. Ensure that sem_init returns zero
	rather than not -1. Use <support/test-driver.c> rather than
	test-skeleton.c.

	* nptl/tst-sem13.c: Add <support/check.h>. (do_test) Use libsupport
	test macros rather than hand-coded conditionals and error messages.
	Use <support/test-driver.c> rather than test-skeleton.c.
